html boilerplate fixed

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-code <index class="html"><!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -6,7 +6,6 @@ code <index class="html"><!DOCTYPE html>
     <title>Document</title>
 </head>
 <body>
-    
+    <h1>Estere</h1>
 </body>
-</html></index>
-<index class="html"></index>
+</html>
