image tag with external source added

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Estere</h1>
+    <h1>Estere Serzante</h1>
+    <img src="https://i2-prod.mirror.co.uk/article35823156.ece/ALTERNATES/s615b/0_F1-Grand-Prix-of-Netherlands.jpg" alt="LeCler">
 </body>
 </html>
